--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
          <img src="img/two.jpg" alt="">
          <nav>
            <ul class="navbar">
-             <li><a href="#">Home</a></li>
+             <li><a href="#" class="active">Home</a></li>
              <li><a href="#">Services</a></li>
              <li><a href="#">Gallery</a></li>
              <li><a href="#">About</a></li>
@@ -24,13 +24,9 @@
       </header>
       <div class="container">
         <div><p>ENJOY YOUR LIFE</p></div>
-        <div class="btn">
-          <ul class="navbar buttons">
-            <li><a href="https://www.youtube.com/watch?v=jaiRojISEzA" target="_blank">WATCH VIDEO</a></li>
-            <li><a href="#">EXPLORE MORE</a></li>
-          </ul>
-          <!-- <button>WATCH VIDEO</button>
-          <button>EXPLORE MORE</button> -->
+        <div class="btn navbar">
+            <div id="div1"><a href="https://www.youtube.com/watch?v=jaiRojISEzA" target="_blank">WATCH VIDEO</a></div>
+            <div id="div2"><a href="https://www.youtube.com/playlist?list=PLaTup7RT6BCw9x8iMS_DPANBQozu_KRM_" target="_blank">EXPLORE MORE</a></div>
         </div>
       </div>
   </body>
